objects/GAU_Allocation_Change_Log__c.object
<CustomObject>
    <description>This object tracks all changes (Create / Edit / Delete) on the GAU Allocation object. The records are generated by an AfterTrigger on the GAU Allocation object. The object allows VSA to audit whenever a user or a system modifies the GAU allocations on an opportunity or a campaign record (VSA-43).</description>
    <fields>
        <fullName>Action__c</fullName>
        <description>This field contains a value of either &quot;Created | Edited | Deleted&quot;. The value in this field reflects whether the GAU allocation change log record itself is the result of a GAU allocation record being created, edited, or deleted. The field&apos;s value is set by the GAU Allocation trigger (VSA-43).</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Edited</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains a look-up to the campaign record which generated the GAU allocation change log. A GAU allocation change log record will either have a value in this field or in the Opportunity field - never in both (VSA-43).</description>
        <inlineHelpText>The campaign to which the GAU allocation change is linked.</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>GAU Allocation Change Logs</relationshipLabel>
        <relationshipName>GAU_Allocation_Change_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_GAU_Allocation__c</fullName>
        <description>This field contains a text string which expresses the nature of the GAU allocation change. Please note that the &apos;£&apos;-sign in the text string is hard-coded because VSA is currently not supporting multi-currencies (VSA-43).</description>
        <inlineHelpText>The GAU Allocation change operation.</inlineHelpText>
        <label>New GAU Allocation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains a look-up to the opportunity record which generated the GAU allocation change log. A GAU allocation change log record will either have a value in this field or in the Campaign field - never in both (VSA-43).</description>
        <inlineHelpText>The opportunity to which the GAU allocation change is linked.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>GAU Allocation Change Logs</relationshipLabel>
        <relationshipName>GAU_Allocation_Change_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains a look-up to the user who made the GAU allocation change (VSA-43).</description>
        <inlineHelpText>The user who made the GAU Allocation change.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GAU_Allocation_Change_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GAU Allocation Change Log</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>GAU Allocation Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GAU Allocation Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>